// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxSelection should render 1`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
        Array [
          "clear.all",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
      ],
    }
  }
>
  <div
    aria-hidden={true}
    aria-label="translation"
    className="bx--list-box__selection"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    title="translation"
  >
    <ForwardRef(Close16)>
      <Icon
        fill="currentColor"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
          />
        </svg>
      </Icon>
    </ForwardRef(Close16)>
  </div>
</ListBoxSelection>
`;

exports[`ListBoxSelection should render 2`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  selectionCount={3}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
        Array [
          "clear.all",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
      ],
    }
  }
>
  <div
    className="bx--tag bx--tag--filter bx--tag--high-contrast"
  >
    <span
      className="bx--tag__label"
      title={3}
    >
      3
    </span>
    <div
      aria-hidden={true}
      aria-label="translation"
      className="bx--tag__close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
      title="translation"
    >
      <ForwardRef(Close16)>
        <Icon
          fill="currentColor"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
            />
          </svg>
        </Icon>
      </ForwardRef(Close16)>
    </div>
  </div>
</ListBoxSelection>
`;
